# bridge

./: .gitignore  Cargo.toml  Cross.toml
bridge-audio/: Cargo.toml  build.rs
bridge-audio/src/: capture.rs  lib.rs  playback.rs
bridge-client/: Cargo.toml
bridge-client/src/: main.rs
bridge-common/: Cargo.toml
bridge-common/src/: error.rs  lib.rs  protocol.rs  types.rs
bridge-diag/: Cargo.toml  build.rs
bridge-diag/src/: main.rs
bridge-input/: Cargo.toml  build.rs
bridge-input/src/: capture.rs  inject.rs  lib.rs  sys.rs
bridge-input/src/linux/: keymap.rs  mod.rs  uinput.rs
bridge-input/src/macos/: capture.rs  inject.rs  mod.rs  sys.rs
bridge-server/: Cargo.toml
bridge-server/src/: main.rs
bridge-transport/: Cargo.toml
bridge-transport/src/: connection.rs  discovery.rs  lib.rs  quic.rs  tcp_video.rs  udp.rs
bridge-transport/src/linux/: discovery.rs
bridge-transport/src/macos/: discovery.rs
bridge-video/: Cargo.toml  build.rs
bridge-video/src/: capture.rs  codec.rs  display.rs  lib.rs  sck_capture.rs  sys.rs  virtual_display.rs
bridge-video/src/linux/: color_convert.rs  mod.rs  nvenc_helper.c  v4l2_encoder.rs  x11_capture.rs  xvfb.rs
bridge-video/src/macos/: capture.rs  codec.rs  display.rs  mod.rs  sck_capture.rs  sys.rs  virtual_display.rs
bridge-video/tests/: integration_tests.rs
docs/superpowers/plans/: 2026-04-02-linux-jetson-port.md
docs/superpowers/specs/: 2026-04-02-linux-jetson-port-design.md
