[package]
name = "bridge-audio"
version.workspace = true
edition.workspace = true

[dependencies]
bridge-common = { path = "../bridge-common" }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }

# Audio
cpal = { workspace = true }

# macOS frameworks
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
block2 = { workspace = true }
core-foundation = { workspace = true }
dispatch = { workspace = true }

# For CoreAudio bindings
libc = "0.2"

[build-dependencies]
cc = "1.2"
