[package]
name = "bridge-audio"
version.workspace = true
edition.workspace = true

[dependencies]
bridge-common = { path = "../bridge-common" }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
cpal = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS frameworks
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
block2 = { workspace = true }
core-foundation = { workspace = true }
dispatch = { workspace = true }

[build-dependencies]
cc = "1.2"
