[package]
name = "bridge-video"
version.workspace = true
edition.workspace = true

[dependencies]
bridge-common = { path = "../bridge-common" }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS frameworks
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-quartz-core = { workspace = true }
block2 = { workspace = true }
core-foundation = { workspace = true }
core-graphics = { workspace = true }
dispatch = { workspace = true }

# Metal rendering
metal = { workspace = true }
core-graphics-types = { workspace = true }

# ScreenCaptureKit (modern macOS screen capture) - optional, requires full Xcode
screencapturekit = { version = "1.5", features = ["macos_14_0"], optional = true }

[features]
default = ["screencapturekit"]
sck = ["screencapturekit"]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
x11rb = { workspace = true }

[build-dependencies]
cc = "1.2"
